-refactor -Change quiz entity model.Use mapper -entity/entityDto from https://github.com/Leonzio20/assemblers -Security jwt -delete from gitignore aplication.properties -update README.md